--- a/Camara2/app/src/main/AndroidManifest.xml
+++ b/Camara2/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
 
         <service android:name=".DemoCamService" />
 
-        <activity android:name=".PreferencesActivity"></activity>
+        <activity android:name=".Activities.PreferencesActivity"></activity>
     </application>
 
 </manifest>
