--- a/Ejemplos/BatteryLevelChecker/app/build.gradle
+++ b/Ejemplos/BatteryLevelChecker/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "salesianostriana.timelapse"
-        minSdkVersion 19
+        applicationId "firebase.palma.com.batterylevelchecker"
+        minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -26,8 +26,4 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
-    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.1.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-    compile 'com.karumi:dexter:3.0.2'
-
 }
