--- a/Camara2/app/build.gradle
+++ b/Camara2/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.1.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile 'com.karumi:dexter:3.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
 }
