--- a/Camara2/app/src/main/AndroidManifest.xml
+++ b/Camara2/app/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="salesianostriana.timelapse"
-    >
+    package="salesianostriana.timelapse">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission."/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission." />
 
     <application
         android:allowBackup="true"
@@ -15,8 +14,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity"
-            android:screenOrientation="portrait">
+
+        <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,9 +23,16 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".DemoCamService" />
+        <activity
+            android:name=".Activities.TimelapseActivity"
+            android:screenOrientation="portrait">
 
-        <activity android:name=".Activities.PreferencesActivity"></activity>
+        </activity>
+
+        <activity android:name=".Activities.PreferencesActivity" />
+        <activity android:name=".Activities.ScannerActivity" />
+
+        <service android:name=".TimelapseService" />
     </application>
 
 </manifest>
