--- a/Timelapse/app/build.gradle
+++ b/Timelapse/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile 'com.karumi:dexter:3.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-
+    compile 'me.dm7.barcodescanner:zxing:1.9'
 }
