--- a/Timelapse/app/src/main/AndroidManifest.xml
+++ b/Timelapse/app/src/main/AndroidManifest.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="salesianostriana.timelapse"
-    >
+    package="salesianostriana.timelapse">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
-<<<<<<< HEAD:Timelapse/app/src/main/AndroidManifest.xml
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-=======
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission."/>
->>>>>>> d5f6d3cbfcbbffe706cf45ac0299d8d0eeb67c62:Camara2/app/src/main/AndroidManifest.xml
 
     <application
         android:allowBackup="true"
@@ -19,13 +13,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD:Timelapse/app/src/main/AndroidManifest.xml
 
         <activity android:name=".activities.MainActivity">
-=======
-        <activity android:name=".Activities.MainActivity"
-            android:screenOrientation="portrait">
->>>>>>> d5f6d3cbfcbbffe706cf45ac0299d8d0eeb67c62:Camara2/app/src/main/AndroidManifest.xml
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,7 +22,6 @@
             </intent-filter>
         </activity>
 
-<<<<<<< HEAD:Timelapse/app/src/main/AndroidManifest.xml
         <activity
             android:name=".activities.TimelapseActivity"
             android:screenOrientation="portrait">
@@ -42,11 +30,8 @@
 
         <activity android:name=".activities.PreferencesActivity" />
         <activity android:name=".activities.ScannerActivity" />
-=======
-        <service android:name=".DemoCamService" />
->>>>>>> d5f6d3cbfcbbffe706cf45ac0299d8d0eeb67c62:Camara2/app/src/main/AndroidManifest.xml
 
-        <activity android:name=".Activities.PreferencesActivity"></activity>
+        <service android:name=".TimelapseService" />
     </application>
 
 </manifest>
